# docs/swagger.yaml
@@ -1,5 +1,26 @@
 basePath: /api
 definitions:
+  dto.AuthConfirmVerifyRequest:
+    properties:
+      address:
+        example: "+77012345678"
+        type: string
+      code:
+        maxLength: 6
+        minLength: 6
+        type: string
+      type:
+        example: phone
+        type: string
+      user_id:
+        example: 1
+        type: integer
+    required:
+    - address
+    - code
+    - type
+    - user_id
+    type: object
   dto.AuthHelloResponse:
     properties:
       email:
@@ -42,6 +63,9 @@ definitions:
     type: object
   dto.AuthRegisterRequest:
     properties:
+      confirm_type:
+        example: phone or email
+        type: string
       email:
         example: test@mail.com
         type: string
@@ -54,6 +78,7 @@ definitions:
         example: "+77012345678"
         type: string
     required:
+    - confirm_type
     - name
     - password
     type: object
@@ -65,6 +90,18 @@ definitions:
         type: string
       role_name:
         type: string
+    type: object
+  dto.AuthSendVerifyRequest:
+    properties:
+      address:
+        example: "+77012345678"
+        type: string
+      type:
+        example: phone
+        type: string
+    required:
+    - address
+    - type
     type: object
   dto.AuthSession:
     properties:
@@ -124,6 +161,24 @@ info:
   title: github.com/AlmasNurbayev/go_fiber_boilerplate API documentation
   version: 1.0.0
 paths:
+  /auth/confirm-verify:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.AuthConfirmVerifyRequest'
+        "400":
+          description: bad request
+          schema:
+            type: string
+      summary: Send verify code to user address
+      tags:
+      - Auth
   /auth/hello:
     get:
       consumes:
@@ -218,6 +273,24 @@ paths:
           schema:
             type: string
       summary: Register as user
+      tags:
+      - Auth
+  /auth/send-verify:
+    post:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.AuthSendVerifyRequest'
+        "401":
+          description: authentication failed
+          schema:
+            type: string
+      summary: Verify user addresses
       tags:
       - Auth
   /auth/sessions/{id}:
