# internal/httpApp/handlers/auth.go
@@ -19,6 +19,8 @@ type authService interface {
 	Refresh(context.Context, string) (dto.AuthLoginResponse, error)
 	Sessions(context.Context, int64) (dto.AuthSessionResponse, error)
 	RevokeSession(fiber.Ctx, string) error
+	SendVerify(context.Context, dto.AuthSendVerifyRequest) error
+	//ConfirmVerify(context.Context, dto.AuthConfirmVerifyRequest) error
 }
 
 type AuthHandler struct {
@@ -63,6 +65,9 @@ func (h *AuthHandler) AuthRegister(c fiber.Ctx) error {
 	res, err := h.service.Register(c, body)
 	if err != nil {
 		log.Warn(err.Error())
+		if err == errorsApp.ErrAlreadyOtp.Error {
+			return c.Status(400).SendString(errorsApp.ErrAlreadyOtp.Message)
+		}
 		return c.Status(400).SendString(err.Error())
 	}
 
@@ -246,6 +251,68 @@ func (h *AuthHandler) RevokeSession(c fiber.Ctx) error {
 		}
 
 		return c.Status(401).SendString(errorsApp.ErrAuthentication.Message)
+	}
+
+	return c.Status(200).SendString("ok")
+}
+
+// @Summary      Verify user addresses
+// @Tags         Auth
+// @Accept       json
+// @Produce      json
+// @Success      200      string  "ok"
+// @Success      200      {object}  dto.AuthSendVerifyRequest
+// @Failure      401      {string}  string  "authentication failed"
+// @Router       /auth/send-verify [post]
+func (h *AuthHandler) SendVerify(c fiber.Ctx) error {
+	op := "HttpHandlers.SendVerify"
+	log := h.log.With(slog.String("op", op))
+
+	err := lib.ValidateBody(c, &dto.AuthSendVerifyRequest{})
+	if err != nil {
+		log.Warn(err.Error())
+		return c.Status(400).SendString(err.Error())
+	}
+
+	body := dto.AuthSendVerifyRequest{}
+	if err := c.Bind().Body(&body); err != nil {
+		return c.Status(401).JSON(fiber.Map{
+			"error": "not correct data: " + err.Error(),
+		})
+	}
+
+	err2 := h.service.SendVerify(c, body)
+	if err2 != nil {
+		log.Warn(err2.Error())
+		return c.Status(400).SendString(err2.Error())
+	}
+
+	return c.Status(200).SendString("ok")
+}
+
+// @Summary      Send verify code to user address
+// @Tags         Auth
+// @Accept       json
+// @Produce      json
+// @Success      200      string  "ok"
+// @Success      200      {object}  dto.AuthConfirmVerifyRequest
+// @Failure      400      {string}  string  "bad request"
+// @Router       /auth/confirm-verify [post]
+func (h *AuthHandler) ConfirmVerify(c fiber.Ctx) error {
+	op := "HttpHandlers.ConfirmVerify"
+	log := h.log.With(slog.String("op", op))
+
+	err := lib.ValidateBody(c, &dto.AuthConfirmVerifyRequest{})
+	if err != nil {
+		log.Warn(err.Error())
+		return c.Status(400).SendString(err.Error())
+	}
+
+	body := dto.AuthConfirmVerifyRequest{}
+	if err := c.Bind().Body(&body); err != nil {
+		return c.Status(400).JSON(fiber.Map{
+			"error": "not correct data: " + err.Error(),
+		})
 	}
 
 	return c.Status(200).SendString("ok")
